Code gardening - adding comments, finals and improving some names.

--- a/src/app/src/main/res/layout/item_recipe.xml
+++ b/src/app/src/main/res/layout/item_recipe.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.pedrolopesme.android.bakingapp.modules.recipes.RecipeViewModel" />
+            type="com.pedrolopesme.android.bakingapp.modules.recipes.RecipeItemViewModel" />
     </data>
 
     <android.support.constraint.ConstraintLayout
