--- a/src/app/src/main/res/layout/item_recipe.xml
+++ b/src/app/src/main/res/layout/item_recipe.xml
@@ -11,13 +11,13 @@
     </data>
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/cl_recipe_item"
         android:layout_width="fill_parent"
         android:layout_height="120dp"
-        android:id="@+id/cl_recipe_item"
         android:background="@color/colorAccent">
 
         <ImageView
-            android:id="@+id/iv_dish"
+            android:id="@+id/iv_recipe_item_dish"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
@@ -30,7 +30,7 @@
             app:srcCompat="@mipmap/ic_dish" />
 
         <TextView
-            android:id="@+id/tv_recipe_name"
+            android:id="@+id/tv_recipe_item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
@@ -43,11 +43,11 @@
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_dish"
+            app:layout_constraintTop_toBottomOf="@+id/iv_recipe_item_dish"
             tools:text="Recipe One Test" />
 
         <TextView
-            android:id="@+id/tv_level"
+            android:id="@+id/tv_recipe_item_level"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -57,11 +57,11 @@
             android:textColor="@color/mainTextColor"
             android:textSize="16sp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_recipe_name"
+            app:layout_constraintTop_toBottomOf="@+id/tv_recipe_item_name"
             tools:text="EASY" />
 
         <TextView
-            android:id="@+id/tv_servings"
+            android:id="@+id/tv_recipe_item_servings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -72,18 +72,18 @@
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_recipe_name"
+            app:layout_constraintTop_toBottomOf="@+id/tv_recipe_item_name"
             tools:text="10" />
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/im_recipe_item_dish"
             android:layout_width="20sp"
             android:layout_height="22sp"
             android:layout_marginEnd="8dp"
             android:layout_marginTop="0dp"
             android:contentDescription="@string/image_servings_description"
-            app:layout_constraintRight_toLeftOf="@+id/tv_servings"
-            app:layout_constraintTop_toBottomOf="@+id/tv_recipe_name"
+            app:layout_constraintRight_toLeftOf="@+id/tv_recipe_item_servings"
+            app:layout_constraintTop_toBottomOf="@+id/tv_recipe_item_name"
             app:srcCompat="@mipmap/ic_people" />
     </android.support.constraint.ConstraintLayout>
 
