Adding basic navigation between recipe description to step description

--- a/src/app/src/main/res/layout/fragment_recipe.xml
+++ b/src/app/src/main/res/layout/fragment_recipe.xml
@@ -10,7 +10,7 @@
 
         <variable
             name="stepsViewModel"
-            type="com.pedrolopesme.android.bakingapp.modules.step.StepsViewModel" />
+            type="com.pedrolopesme.android.bakingapp.modules.steps.StepsViewModel" />
     </data>
 
     <LinearLayout
