--- a/src/app/src/main/res/layout/item_step.xml
+++ b/src/app/src/main/res/layout/item_step.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.pedrolopesme.android.bakingapp.modules.step.StepItemViewModel" />
+            type="com.pedrolopesme.android.bakingapp.modules.steps.StepsItemViewModel" />
     </data>
 
     <android.support.constraint.ConstraintLayout
