Adding media player to play Recipe Step videos

--- a/src/app/src/main/res/layout/fragment_step.xml
+++ b/src/app/src/main/res/layout/fragment_step.xml
@@ -1,4 +1,5 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -13,6 +14,12 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:context="com.pedrolopesme.android.bakingapp.modules.step.StepActivity">
+
+        <com.devbrackets.android.exomedia.ui.widget.VideoView
+            android:id="@+id/vv_step_video"
+            android:layout_width="match_parent"
+            android:layout_height="350dp"
+            app:useDefaultControls="true"/>
 
         <TextView
             android:id="@+id/tv_step_description"
