--- a/src/app/src/main/res/layout/fragment_recipe.xml
+++ b/src/app/src/main/res/layout/fragment_recipe.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="recipeViewModel"
             type="com.pedrolopesme.android.bakingapp.modules.recipe.RecipeViewModel" />
@@ -17,6 +18,12 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:context="com.pedrolopesme.android.bakingapp.modules.recipe.RecipeActivity">
+
+        <Button
+            android:id="@+id/bt_add_wdiget"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/add_to_widget" />
 
         <TextView
             android:id="@+id/tv_recipe_ingredients"
