--- a/src/app/src/main/res/xml/recipe_widget_provider_info.xml
+++ b/src/app/src/main/res/xml/recipe_widget_provider_info.xml
@@ -6,5 +6,4 @@
     android:minWidth="40dp"
     android:previewImage="@drawable/example_appwidget_preview"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="3000"
-    android:widgetCategory="home_screen" />
+    android:updatePeriodMillis="86400000"  />
