--- a/src/app/src/main/res/values/styles.xml
+++ b/src/app/src/main/res/values/styles.xml
@@ -9,4 +9,13 @@
         <item name="titleTextColor">@color/colorTitle</item>
     </style>
 
+    <!-- Base List Item -->
+    <style name="listItem">
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_marginLeft">8dp</item>
+        <item name="android:layout_marginRight">8dp</item>
+        <item name="android:layout_marginTop">0dp</item>
+        <item name="android:textColor">@color/listItemTitle</item>
+    </style>
+
 </resources>
