--- a/src/app/src/main/res/layout/activity_recipe.xml
+++ b/src/app/src/main/res/layout/activity_recipe.xml
@@ -7,7 +7,7 @@
 
     <FrameLayout
         android:id="@+id/fl_recipe_container"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="3" />
 
