--- a/src/app/src/main/res/layout/fragment_recipe.xml
+++ b/src/app/src/main/res/layout/fragment_recipe.xml
@@ -13,30 +13,40 @@
             type="com.pedrolopesme.android.bakingapp.modules.steps.StepsViewModel" />
     </data>
 
-    <LinearLayout
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context="com.pedrolopesme.android.bakingapp.modules.recipe.RecipeActivity">
+        android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/bt_add_wdiget"
+        <LinearLayout
+            android:id="@+id/mainList"
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:context="com.pedrolopesme.android.bakingapp.modules.recipe.RecipeActivity">
+
+            <TextView
+                android:id="@+id/tv_recipe_ingredients"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{recipeViewModel.ingredients}" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_steps"
+                android:layout_width="match_parent"
+                android:layout_height="0px"
+                android:layout_weight="1"
+                android:paddingRight="64dp"
+                bind:recyclerViewViewModel="@{stepsViewModel}" />
+
+        </LinearLayout>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_add_widget"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/add_to_widget" />
+            android:layout_gravity="bottom|right|end"
+            android:layout_margin="@dimen/fab_margin"
+            android:src="@drawable/ic_widget" />
 
-        <TextView
-            android:id="@+id/tv_recipe_ingredients"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@{recipeViewModel.ingredients}" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_steps"
-            android:layout_width="match_parent"
-            android:layout_height="0px"
-            android:layout_weight="1"
-            bind:recyclerViewViewModel="@{stepsViewModel}" />
-
-    </LinearLayout>
+    </android.support.design.widget.CoordinatorLayout>
 </layout>
