--- a/src/app/src/main/res/values/colors.xml
+++ b/src/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#FF4081</color>
     <color name="colorPrimaryDark">#d23a6e</color>
-    <color name="colorAccent">#e78a27</color>
+    <color name="colorAccent">#f9ce62</color>
     <color name="colorTitle">#FFFFFF</color>
     <color name="listItemTitle">#333333</color>
 
