--- a/src/app/src/main/res/layout/activity_recipe.xml
+++ b/src/app/src/main/res/layout/activity_recipe.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cl_activiy_recipe_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.pedrolopesme.android.bakingapp.modules.recipe.RecipeActivity">
@@ -11,4 +12,4 @@
         android:layout_height="match_parent"
         android:layout_weight="3" />
 
-</android.support.constraint.ConstraintLayout>
+</android.support.design.widget.CoordinatorLayout>
