--- a/src/app/src/main/res/values/styles.xml
+++ b/src/app/src/main/res/values/styles.xml
@@ -10,11 +10,39 @@
     </style>
 
     <!-- Base List Item -->
+    <style name="listItemNumber">
+        <item name="android:textSize">12sp</item>
+        <item name="android:layout_marginLeft">8dp</item>
+        <item name="android:layout_marginRight">8dp</item>
+        <item name="android:layout_marginTop">0dp</item>
+        <item name="android:textColor">@color/listItemTitle</item>
+    </style>
+
     <style name="listItem">
         <item name="android:textSize">16sp</item>
         <item name="android:layout_marginLeft">8dp</item>
         <item name="android:layout_marginRight">8dp</item>
         <item name="android:layout_marginTop">0dp</item>
+        <item name="android:textColor">@color/listItemTitle</item>
+    </style>
+
+    <!-- Ingredients -->
+    <style name="ingredientsList">
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_marginLeft">8dp</item>
+        <item name="android:layout_marginRight">8dp</item>
+        <item name="android:layout_marginTop">0dp</item>
+        <item name="android:lineSpacingExtra">8dp</item>
+        <item name="android:textColor">@color/listItemTitle</item>
+    </style>
+
+    <style name="recipeTitle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_marginLeft">8dp</item>
+        <item name="android:layout_marginRight">8dp</item>
+        <item name="android:layout_marginTop">0dp</item>
+        <item name="android:lineSpacingExtra">8dp</item>
         <item name="android:textColor">@color/listItemTitle</item>
     </style>
 
