--- a/src/app/src/main/res/layout-sw600dp/activity_recipe.xml
+++ b/src/app/src/main/res/layout-sw600dp/activity_recipe.xml
@@ -6,20 +6,21 @@
     android:baselineAligned="false"
     android:divider="?android:attr/dividerHorizontal"
     android:orientation="horizontal"
-    android:showDividers="middle">
+    android:showDividers="middle"
+    android:id="@+id/cl_activiy_recipe_main">
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/fl_recipe_container"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        tools:context=".modules.recipe.RecipeActivity" />
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/fl_recipe_container"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            tools:context=".modules.recipe.RecipeActivity" />
 
-    <FrameLayout
-        android:id="@+id/fl_step_container"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="3" />
-
+        <FrameLayout
+            android:id="@+id/fl_step_container"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3" />
+        
 </LinearLayout>
