--- a/src/app/src/main/res/layout/fragment_step.xml
+++ b/src/app/src/main/res/layout/fragment_step.xml
@@ -25,12 +25,16 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <com.devbrackets.android.exomedia.ui.widget.VideoView
+                <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                     android:id="@+id/vv_step_video"
                     android:layout_width="match_parent"
                     android:layout_height="350dp"
-                    android:visibility="gone"
-                    app:useDefaultControls="true" />
+                    android:layout_marginTop="0dp"
+                    android:layout_marginRight="0dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginLeft="0dp"
+                    android:layout_margin="10dp"
+                    android:visibility="gone"/>
 
                 <ImageView
                     android:id="@+id/imageView"
