--- a/src/app/src/main/res/layout/fragment_step_videoonly.xml
+++ b/src/app/src/main/res/layout/fragment_step_videoonly.xml
@@ -9,13 +9,10 @@
         android:layout_height="fill_parent"
         tools:context="com.pedrolopesme.android.bakingapp.modules.step.StepActivity">>
 
-        <com.devbrackets.android.exomedia.ui.widget.VideoView
+        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
             android:id="@+id/vv_step_video"
             android:layout_width="match_parent"
-            android:layout_height="350dp"
-
-            app:useDefaultControls="true" />
-
+            android:layout_height="350dp" />
 
     </RelativeLayout>
 
