--- a/src/app/src/main/res/layout/fragment_step.xml
+++ b/src/app/src/main/res/layout/fragment_step.xml
@@ -37,7 +37,7 @@
                     android:visibility="gone"/>
 
                 <ImageView
-                    android:id="@+id/imageView"
+                    android:id="@+id/iv_step_thumb"
                     android:layout_width="match_parent"
                     android:layout_height="240dp"
                     app:srcCompat="@drawable/ic_no_video" />
