--- a/src/app/src/main/res/layout/fragment_recipe.xml
+++ b/src/app/src/main/res/layout/fragment_recipe.xml
@@ -19,6 +19,7 @@
         android:layout_height="match_parent">
 
         <ScrollView
+            android:id="@+id/sv_recipe_main_scroll"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fillViewport="true">
